fix: color variant in links of header and footer, add: dummy about page

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 								name="name"
 								id="name"
 								placeholder="John Doe"
-								class="border border-gray-300 rounded-md p-2"
+								class="border border-blue-900 border-opacity-30 rounded-md p-2"
 							/>
 						</div>
 						<div class="flex flex-col">
@@ -34,7 +34,7 @@
 								name="email"
 								id="email"
 								placeholder="johndoe@example.com"
-								class="border border-gray-300 rounded-md p-2"
+								class="border border-blue-900 border-opacity-30 rounded-md p-2"
 							/>
 						</div>
 						<div class="flex flex-col">
@@ -46,7 +46,7 @@
 								name="subject"
 								id="subject"
 								placeholder="I want to take admission in your college"
-								class="border border-gray-300 rounded-md p-2"
+								class="border border-blue-900 border-opacity-30 rounded-md p-2"
 							/>
 						</div>
 						<div class="flex flex-col">
@@ -60,7 +60,7 @@
 								rows="10"
 								placeholder="Message"
 								maxlength="500"
-								class="border border-gray-300 rounded-md p-2"
+								class="border border-blue-900 border-opacity-30 rounded-md p-2"
 							></textarea>
 						</div>
 						<button
