--- a/about.html
+++ b/about.html
@@ -8,7 +8,91 @@
 	<body>
 		<custom-header></custom-header>
 		<main>
-			<div class="font-bold">About Page</div>
+			<section class="bg-blue-50 py-10 px-4">
+				<div
+					class="wrapper flex flex-col md:flex-row items-center gap-6"
+				>
+					<div class="flex flex-col gap-2">
+						<h1 class="font-black text-4xl">About us</h1>
+						<p class="opacity-80">
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Doloremque aperiam eum id, consectetur rerum
+							nihil nobis accusantium. Vel veniam sequi ab
+							cupiditate ratione aliquid iure qui saepe. Dolores,
+							nam saepe!
+						</p>
+						<div class="flex gap-4 py-2">
+							<button
+								type="button"
+								class="bg-blue-700 text-white border border-transparent rounded-md py-2 px-5 hover:bg-blue-800 transition duration-200 ease-in-out"
+							>
+								Apply now
+							</button>
+							<button
+								type="button"
+								class="bg-white bg-opacity-0 text-blue-700 border border-blue-700 rounded-md py-2 px-5 hover:border-blue-800 hover:text-blue-800 hover:bg-opacity-20 transition duration-200 ease-in-out"
+							>
+								Learn more
+							</button>
+						</div>
+					</div>
+					<div class="w-full md:max-w-sm">
+						<img
+							src="https://source.unsplash.com/480x480/?college"
+							alt="college"
+							class="rounded-sm w-full h-80 object-cover"
+						/>
+					</div>
+				</div>
+			</section>
+			<section class="bg-blue-100 py-16 px-4">
+				<div class="wrapper">
+					<div class="flex flex-wrap justify-center gap-8">
+						<div class="text-center w-full max-w-xs">
+							<p
+								class="font-extrabold text-4xl leading-6 text-blue-900"
+							>
+								20000+
+								<br />
+								<span
+									class="text-sm uppercase tracking-widest font-normal opacity-70"
+									>Alumni till 2022</span
+								>
+							</p>
+						</div>
+						<div class="text-center w-full max-w-xs">
+							<p
+								class="font-extrabold text-4xl leading-6 text-blue-900"
+							>
+								22+
+								<br />
+								<span
+									class="text-sm uppercase tracking-widest font-normal opacity-70"
+									>Acres of lush blue campus</span
+								>
+							</p>
+						</div>
+						<div class="text-center w-full max-w-xs">
+							<p
+								class="font-extrabold text-4xl leading-6 text-blue-900"
+							>
+								100+
+								<br />
+								<span
+									class="text-sm uppercase tracking-widest font-normal opacity-70"
+									>Highly experienced faculties</span
+								>
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="py-16 px-4">
+				<div class="wrapper"></div>
+			</section>
+			<section class="py-16 px-4">
+				<div class="wrapper"></div>
+			</section>
 		</main>
 		<custom-footer></custom-footer>
 	</body>
