adds courses page and about page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Contact us - SAIMS</title>
-		<script src="./components/index.js" type="module" defer></script>
+		<script src="./js/components/index.js" type="module" defer></script>
 		<common-head></common-head>
 	</head>
 	<body>
