--- a/about.html
+++ b/about.html
@@ -2,24 +2,41 @@
 <html lang="en">
 	<head>
 		<title>About - SAIMS</title>
-		<script src="./components/index.js" type="module" defer></script>
+		<script src="./js/components/index.js" type="module" defer></script>
 		<common-head></common-head>
+		<style>
+			.message-container > div {
+				border-bottom: 8px solid #2563eb;
+			}
+
+			@media (min-width: 768px) {
+				.message-container > div:nth-child(2n + 1) {
+					margin-left: -2rem;
+					border-left: 8px solid #2563eb;
+				}
+				.message-container > div:nth-child(2n) {
+					margin-left: 3rem;
+					border-right: 8px solid #2563eb;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<custom-header></custom-header>
 		<main>
-			<section class="bg-blue-50 py-10 px-4">
+			<section class="bg-blue-50 py-16 px-4">
 				<div
-					class="wrapper flex flex-col md:flex-row items-center gap-6"
+					class="wrapper flex flex-col md:flex-row md:justify-between items-center gap-6"
 				>
-					<div class="flex flex-col gap-2">
-						<h1 class="font-black text-4xl">About us</h1>
-						<p class="opacity-80">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Doloremque aperiam eum id, consectetur rerum
-							nihil nobis accusantium. Vel veniam sequi ab
-							cupiditate ratione aliquid iure qui saepe. Dolores,
-							nam saepe!
+					<div class="flex flex-col gap-4">
+						<h2 class="font-bold text-3xl md:text-4xl">About us</h2>
+						<p class="opacity-80 max-w-2xl">
+							Discover the art and science of healing at our
+							College of Medical Science - where education meets
+							innovation, and every student is on a journey to
+							make a meaningful impact. Join us and be part of a
+							community dedicated to shaping the future of
+							healthcare.
 						</p>
 						<div class="flex gap-4 py-2">
 							<button
@@ -36,12 +53,81 @@
 							</button>
 						</div>
 					</div>
-					<div class="w-full md:max-w-sm">
+					<div class="w-full md:max-w-md">
 						<img
-							src="https://source.unsplash.com/480x480/?college"
+							src="https://source.unsplash.com/720x480/?building,college"
 							alt="college"
-							class="rounded-sm w-full h-80 object-cover"
+							class="rounded-sm w-full max-h-80 md:max-h-full object-contain md:object-cover"
 						/>
+					</div>
+				</div>
+			</section>
+			<section class="py-16 px-4">
+				<div class="wrapper">
+					<h2 class="font-bold text-3xl mb-6">
+						Message to our students
+					</h2>
+					<div
+						class="flex flex-col items-center gap-8 message-container"
+					>
+						<div
+							class="flex flex-col items-center md:flex-row md:justify-between gap-3 md:gap-8 bg-blue-50 shadow-sm text-gray-800 p-4 md:py-6 md:px-8 rounded-md max-w-2xl"
+						>
+							<div class="flex flex-col items-center gap-3">
+								<img
+									src="https://source.unsplash.com/480x480/?formal,suit"
+									alt="director"
+									class="h-28 w-28 max-w-xs object-cover rounded-full"
+								/>
+								<div class="text-center font-bold">
+									<h3 class="text-lg">Dr John Doe</h3>
+									<h4 class="opacity-80 text-sm">Director</h4>
+								</div>
+							</div>
+							<div class="max-w-md text-center md:text-left">
+								<p class="opacity-90 relative md:pt-4">
+									<span
+										class="text-blue-800 text-5xl md:text-7xl italic absolute -top-2 -left-2"
+										>"</span
+									>
+									Lorem ipsum dolor sit, amet consectetur
+									adipisicing elit. Rerum voluptates
+									doloribus, laborum hic ullam eos unde
+									provident perspiciatis, exercitationem dicta
+									distinctio non eveniet facilis consequuntur
+									nesciunt totam culpa corporis alias?
+								</p>
+							</div>
+						</div>
+						<div
+							class="flex flex-col items-center md:flex-row-reverse md:justify-between gap-3 md:gap-8 bg-blue-50 shadow-sm text-gray-800 p-4 md:py-6 md:px-8 rounded-md max-w-2xl"
+						>
+							<div class="flex flex-col items-center gap-3">
+								<img
+									src="https://source.unsplash.com/480x480/?formal,man"
+									alt="director"
+									class="h-28 w-28 max-w-xs object-cover rounded-full"
+								/>
+								<div class="text-center font-bold">
+									<h3 class="text-lg">Dr Harry Doe</h3>
+									<h4 class="opacity-80 text-sm">Chairman</h4>
+								</div>
+							</div>
+							<div class="max-w-md text-center md:text-left">
+								<p class="opacity-90 relative md:pt-4">
+									<span
+										class="text-blue-800 text-5xl md:text-7xl italic absolute -top-2 -left-2"
+										>"</span
+									>
+									Lorem ipsum dolor sit, amet consectetur
+									adipisicing elit. Rerum voluptates
+									doloribus, laborum hic ullam eos unde
+									provident perspiciatis, exercitationem dicta
+									distinctio non eveniet facilis consequuntur
+									nesciunt totam culpa corporis alias?
+								</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -50,7 +136,7 @@
 					<div class="flex flex-wrap justify-center gap-8">
 						<div class="text-center w-full max-w-xs">
 							<p
-								class="font-extrabold text-4xl leading-6 text-blue-900"
+								class="font-bold text-4xl leading-6 text-blue-900"
 							>
 								20000+
 								<br />
@@ -62,7 +148,7 @@
 						</div>
 						<div class="text-center w-full max-w-xs">
 							<p
-								class="font-extrabold text-4xl leading-6 text-blue-900"
+								class="font-bold text-4xl leading-6 text-blue-900"
 							>
 								22+
 								<br />
@@ -74,7 +160,7 @@
 						</div>
 						<div class="text-center w-full max-w-xs">
 							<p
-								class="font-extrabold text-4xl leading-6 text-blue-900"
+								class="font-bold text-4xl leading-6 text-blue-900"
 							>
 								100+
 								<br />
@@ -86,12 +172,6 @@
 						</div>
 					</div>
 				</div>
-			</section>
-			<section class="py-16 px-4">
-				<div class="wrapper"></div>
-			</section>
-			<section class="py-16 px-4">
-				<div class="wrapper"></div>
 			</section>
 		</main>
 		<custom-footer></custom-footer>
