--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="en">
 	<head>
 		<title>St. Andrews Institute of Medical Science</title>
-		<script src="./components/index.js" type="module" defer></script>
+		<script src="./js/components/index.js" type="module" defer></script>
 		<common-head></common-head>
 	</head>
 	<body>
 		<custom-header></custom-header>
 		<main>
-			<section class="bg-blue-50 py-10 px-4">
+			<section class="bg-blue-50 py-16 px-4">
 				<div
-					class="wrapper flex flex-col md:flex-row items-center gap-6"
+					class="wrapper flex flex-col md:flex-row md:justify-between items-center gap-6"
 				>
-					<div class="flex flex-col gap-2">
-						<h1 class="font-black text-4xl">
-							St Andrews Institute of Medical Sciences
-						</h1>
-						<p class="opacity-80">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Doloremque aperiam eum id, consectetur rerum
-							nihil nobis accusantium. Vel veniam sequi ab
-							cupiditate ratione aliquid iure qui saepe. Dolores,
-							nam saepe!
+					<div class="flex flex-col gap-4">
+						<h2 class="font-bold text-3xl md:text-4xl">
+							Nurturing Healers, Advancing Science.
+						</h2>
+						<p class="opacity-80 max-w-2xl">
+							With a commitment to excellence, we foster an
+							environment that empowers students to become skilled
+							practitioners and contribute to the ever-evolving
+							landscape of medical science.
 						</p>
 						<div class="flex gap-4 py-2">
 							<button
@@ -38,11 +37,11 @@
 							</button>
 						</div>
 					</div>
-					<div class="w-full md:max-w-sm">
+					<div class="w-full md:max-w-md">
 						<img
-							src="https://source.unsplash.com/480x480/?college"
+							src="https://source.unsplash.com/720x480/?college,building"
 							alt="college"
-							class="rounded-sm w-full h-80 object-cover"
+							class="rounded-sm w-full max-h-80 md:max-h-full object-contain md:object-cover"
 						/>
 					</div>
 				</div>
@@ -52,7 +51,7 @@
 					<div class="flex flex-wrap justify-center gap-8">
 						<div class="text-center w-full max-w-xs">
 							<p
-								class="font-extrabold text-4xl leading-6 text-blue-900"
+								class="font-bold text-4xl leading-6 text-blue-900"
 							>
 								20000+
 								<br />
@@ -64,7 +63,7 @@
 						</div>
 						<div class="text-center w-full max-w-xs">
 							<p
-								class="font-extrabold text-4xl leading-6 text-blue-900"
+								class="font-bold text-4xl leading-6 text-blue-900"
 							>
 								22+
 								<br />
@@ -76,7 +75,7 @@
 						</div>
 						<div class="text-center w-full max-w-xs">
 							<p
-								class="font-extrabold text-4xl leading-6 text-blue-900"
+								class="font-bold text-4xl leading-6 text-blue-900"
 							>
 								100+
 								<br />
@@ -89,14 +88,12 @@
 					</div>
 				</div>
 			</section>
-			<!-- <section class="py-16 px-4">
-				<div class="wrapper"></div>
-			</section> -->
 			<section class="py-16 px-4">
 				<div class="wrapper">
-					<h2 class="font-extrabold text-3xl mb-6">
+					<h2 class="font-bold text-3xl mb-6">
 						What our alumni say about us
 					</h2>
+
 					<div class="flex flex-wrap gap-8 justify-evenly">
 						<div
 							class="bg-blue-50 rounded-lg py-8 px-4 flex flex-col gap-4 shadow-sm max-w-sm"
@@ -110,7 +107,10 @@
 							</div>
 							<div class="text-center">
 								<h3 class="font-bold text-2xl">John Doe</h3>
-								<p class="opacity-80">
+								<p class="text-sm font-bold opacity-70">
+									B. Tech CSE 2020
+								</p>
+								<p class="opacity-80 mt-2">
 									Lorem ipsum dolor sit amet consectetur
 									adipisicing elit. Nam odit illum
 									perspiciatis, quos tempore repudiandae.
@@ -122,14 +122,17 @@
 						>
 							<div>
 								<img
-									src="https://source.unsplash.com/360x360/?person,face,headshot"
+									src="https://source.unsplash.com/360x360/?female,face,headshot"
 									alt="student"
 									class="rounded-full w-24 h-24 mx-auto"
 								/>
 							</div>
 							<div class="text-center">
 								<h3 class="font-bold text-2xl">John Doe</h3>
-								<p class="opacity-80">
+								<p class="text-sm font-bold opacity-70">
+									B. Tech CSE 2020
+								</p>
+								<p class="opacity-80 mt-2">
 									Lorem ipsum dolor sit amet consectetur
 									adipisicing elit. Nam odit illum
 									perspiciatis, quos tempore repudiandae.
@@ -141,14 +144,17 @@
 						>
 							<div>
 								<img
-									src="https://source.unsplash.com/360x360/?person,face,headshot"
+									src="https://source.unsplash.com/360x360/?man,face,headshot"
 									alt="student"
 									class="rounded-full w-24 h-24 mx-auto"
 								/>
 							</div>
 							<div class="text-center">
 								<h3 class="font-bold text-2xl">John Doe</h3>
-								<p class="opacity-80">
+								<p class="text-sm font-bold opacity-70">
+									B. Tech CSE 2020
+								</p>
+								<p class="opacity-80 mt-2">
 									Lorem ipsum dolor sit amet consectetur
 									adipisicing elit. Nam odit illum
 									perspiciatis, quos tempore repudiandae.
